--- a/Domination/appmanifest.json
+++ b/Domination/appmanifest.json
@@ -1,6 +1,6 @@
 ﻿{
-	"name": "bChao3",
-	"short_name": "bChao3",
+	"name": "Domination",
+	"short_name": "Domination",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "landscape",
